Detail in project structure

--- a/scripts/build
+++ b/scripts/build
@@ -5,7 +5,7 @@ PRJ_ROOT=$(dirname $(dirname $(realpath $0)))
 main() {
     mkdir $PRJ_ROOT/build/ && \
     cd $PRJ_ROOT/build/ && \
-    cmake .. && \
+    cmake .. -DBUILD_TESTS=ON && \
     cmake --build .
 }
 
