Add DoublyLinkedList and replace testing library with gtest

--- a/tests/data_structure/linked_list/CMakeLists.txt
+++ b/tests/data_structure/linked_list/CMakeLists.txt
@@ -1,21 +1,49 @@
-# Create test executable
-add_executable(test_SinglyLinkedList test_SinglyLinkedList.cpp)
+message(STATUS "Configuring linked_list tests")
 
-# Then in your test CMakeLists.txt:
-target_include_directories(test_SinglyLinkedList
+add_executable(test_doubly_linked_list
+    test_DoublyLinkedList.cpp
+)
+
+target_link_libraries(test_doubly_linked_list
     PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../include
+        data_structure_linked_list
+        gtest
+        gtest_main
 )
 
-# Link with our library and Catch2
-target_link_libraries(test_SinglyLinkedList 
-    PRIVATE 
-    SinglyLinkedList 
-    Catch2::Catch2WithMain
+target_include_directories(test_doubly_linked_list
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/src
 )
 
-# Add test
+message(STATUS "DoublyLinkedList test executable will be built at: ${CMAKE_CURRENT_BINARY_DIR}/test_doubly_linked_list")
+
 add_test(
-    NAME test_SinglyLinkedList
-    COMMAND test_SinglyLinkedList [.] --success
+    NAME DoublyLinkedListTests
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_doubly_linked_list
+)
+
+add_executable(test_singly_linked_list
+    test_SinglyLinkedList.cpp
+)
+
+target_link_libraries(test_singly_linked_list
+    PRIVATE
+        data_structure_linked_list
+        gtest
+        gtest_main
+)
+
+target_include_directories(test_singly_linked_list
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/src
+)
+
+message(STATUS "SinglyLinkedList test executable will be built at: ${CMAKE_CURRENT_BINARY_DIR}/test_singly_linked_list")
+
+add_test(
+    NAME SinglyLinkedListTests
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test_singly_linked_list
 )
