--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,54 @@
 cmake_minimum_required(VERSION 3.15)
-project(cpp_refresher LANGUAGES CXX)
+project(barkalot LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Library target (header-only but needs the .cpp for explicit instantiations)
-add_library(cpp_refresher
-    include/data_structure/linked_list/SinglyLinkedList.h
-    src/data_structure/linked_list/SinglyLinkedList.cpp
-)
+option(BUILD_TESTS "Build unit tests" ON)
+option(BUILD_EXAMPLES "Build example programs" OFF)
 
-target_include_directories(cpp_refresher
-    PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-# Testing setup
-option(BUILD_TESTS "Build tests" ON)
 if(BUILD_TESTS)
+    # Option 1: Use FindGTest
+    set(GTEST_ROOT "/usr/include/gtest")
+    find_package(GTest REQUIRED)
+    
+    # Option 2: Use FetchContent
+    #include(FetchContent)
+    #FetchContent_Declare(
+    #    googletest
+    #    GIT_REPOSITORY https://github.com/google/googletest.git
+    #    GIT_TAG release-1.12.1
+    #)
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    #set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    #FetchContent_MakeAvailable(googletest)
+
+    
     enable_testing()
-    add_subdirectory(tests)
+    include(GoogleTest)
 endif()
 
-# Doxygen
-#find_package(Doxygen)
-#if(DOXYGEN_FOUND)
-#    add_custom_target(docs ALL
-#        COMMAND Doxygen::doxygen ${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile
-#        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/docs
-#    )
-#endif()
+file(GLOB TOPICS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/include" "include/*")
+foreach(TOPIC ${TOPICS})
+    message(STATUS "Configuring topic: ${TOPIC}")
+
+    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/${TOPIC}")
+        add_subdirectory(src/${TOPIC})
+    endif()
+    
+    if(BUILD_TESTS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/${TOPIC}")
+        message(STATUS "  Enabling tests for ${TOPIC}")
+        add_subdirectory(tests/${TOPIC})
+    endif()
+    
+    if(BUILD_EXAMPLES AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/examples/${TOPIC}")
+        message(STATUS "  Enabling example for ${TOPIC}")
+        add_subdirectory(examples/${TOPIC})
+    endif()
+endforeach()
+
+if(PROJECT_IS_TOP_LEVEL)
+    include(GNUInstallDirs)
+    install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+endif()
